--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Spotify</title>
 </head>
 <body>
-    
+    <div class="bg-gray-950 w-screen h-screen">
+        <div class="principal w-screen  ">
+            <aside></aside>
+            <section></section>
+        </div>
+        <footer class="reproductor bg-gray-900 w-screen flex justify-between items-center" >
+            <div class="cancion w-80 h-26 flex justify-around items-center">
+                <div><img class="object-contain w-18 h-18" src="https://cdn-images.dzcdn.net/images/cover/81063a1987f09bbe39e7db3f3679893e/0x1900-000000-80-0-0.jpg" alt=""></div>
+                <div>
+                    <p class="text-white font-mono">Guia para la acción</p>
+                    <p class="text-white font-mono text-xs font-thin">Canserbero</p>
+                </div>
+                <div>
+                    <i class="fas fa-heart text-white"></i>
+                </div>
+                
+            </div>
+            <div class="control w-180 h-26 flex flex-col justify-center gap-10">
+                <div class="flex justify-center gap-10">
+                    <i class="fa-solid fa-2x fa-shuffle text-white"></i>
+                    <i class="fa-solid fa-2x fa-backward-step text-white"></i>
+                    <i class="fa-solid fa-2x fa-circle-play text-white"></i>
+                    <i class="fa-solid fa-2x fa-forward-step text-white"></i>
+                    <i class="fa-solid fa-2x fa-repeat text-white"></i>
+                </div>
+                <div>
+                    <div class="w-full h-2 bg-gray-700 rounded-full">
+                        <div class="h-2 bg-green-500 rounded-full" style="width: 60%;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="volumen w-80 h-26 flex gap-3 justify-center items-center">
+                <i class="fa-solid fa-bars text-white"></i>
+                <i class="fa-solid fa-laptop text-white"></i>
+                <i class="fa-solid fa-volume-low text-white"></i>
+                <div class="h-2 w-40 bg-white rounded-full"></div>
+                <i class="fa-solid fa-1x fa-up-right-and-down-left-from-center text-white"></i>
+            </div>
+        </footer>
+    </div>
+
+
+    <script src="app.js"></script>
 </body>
 </html>
