modificaciones a la estructura y al footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>
         <footer class="reproductor bg-gray-900 w-screen flex justify-between items-center" >
             <div class="cancion w-80 h-26 flex justify-around items-center">
-                <div><img class="object-contain w-18 h-18" src="https://cdn-images.dzcdn.net/images/cover/81063a1987f09bbe39e7db3f3679893e/0x1900-000000-80-0-0.jpg" alt=""></div>
+                <div>
+                    <img class="object-contain w-18 h-18" src="https://cdn-images.dzcdn.net/images/cover/81063a1987f09bbe39e7db3f3679893e/0x1900-000000-80-0-0.jpg" alt="">
+                </div>
                 <div>
                     <p class="text-white font-mono">Guia para la acción</p>
                     <p class="text-white font-mono text-xs font-thin">Canserbero</p>
@@ -49,8 +51,6 @@
             </div>
         </footer>
     </div>
-
-
     <script src="app.js"></script>
 </body>
 </html>
