--- a/index.html
+++ b/index.html
@@ -6,12 +6,43 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="">
     <title>Spotify</title>
 </head>
 <body>
     <div class="bg-gray-950 w-screen h-screen">
         <div class="principal w-screen  ">
-            <aside></aside>
+            <aside class="border h-screen w-80 pl-5">
+                <article class="border h-60 flex flex-col">
+                   <article class="border h-40">
+                        <article class="flex items-center">
+                            <i class="fa-solid fa-house text-white fa-2x"></i>
+                            <p class="text-white">Home</p>
+                        </article>
+                        <article class="flex items-center">
+                            <i class="fa-solid fa-magnifying-glass text-white fa-2x"></i>
+                            <p class="text-white">Search</p>
+                        </article>
+                        <article class="flex items-center">
+                            <i class="fa-regular fa-bookmark text-white fa-2x"></i>
+                            <p class="text-white">Your library</p>
+                        </article>
+                   </article>
+                   <article>
+                        <article class="flex items-center">
+                            <i class="fa-regular fa-square-plus text-white fa-2x"></i>
+                            <p class="text-white">Create Playlist</p>
+                        </article>
+                        <article class="flex items-center">
+                            <i class="fas fa-heart text-white fa-2x"></i> 
+                            <p class="text-white">Liked Songs</p>
+                        </article>
+                   </article>
+                </article>
+                <article class="border">
+
+                </article>
+            </aside>
             <section></section>
         </div>
         <footer class="reproductor bg-gray-900 w-screen flex justify-between items-center" >
