--- a/index.html
+++ b/index.html
@@ -6,44 +6,58 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="">
+    <link rel="icon" href="https://static-00.iconduck.com/assets.00/spotify-icon-2048x2048-n3imyp8e.png">
     <title>Spotify</title>
 </head>
 <body>
     <div class="bg-gray-950 w-screen h-screen">
-        <div class="principal w-screen  ">
-            <aside class="border h-screen w-80 pl-5">
-                <article class="border h-60 flex flex-col">
-                   <article class="border h-40">
-                        <article class="flex items-center">
+        <div class="principal w-screen flex">
+            <aside class="w-70 pl-3 bg-gray-950">
+                <article class="h-60 flex flex-col">
+                   <article class="h-40 flex flex-col justify-around ">
+                        <article class="flex items-center gap-3">
                             <i class="fa-solid fa-house text-white fa-2x"></i>
                             <p class="text-white">Home</p>
                         </article>
-                        <article class="flex items-center">
+                        <article class="flex items-center  gap-4">
                             <i class="fa-solid fa-magnifying-glass text-white fa-2x"></i>
                             <p class="text-white">Search</p>
                         </article>
-                        <article class="flex items-center">
+                        <article class="flex items-center  gap-6">
                             <i class="fa-regular fa-bookmark text-white fa-2x"></i>
                             <p class="text-white">Your library</p>
                         </article>
                    </article>
                    <article>
-                        <article class="flex items-center">
+                        <article class="flex items-center gap-5 pt-10">
                             <i class="fa-regular fa-square-plus text-white fa-2x"></i>
                             <p class="text-white">Create Playlist</p>
                         </article>
-                        <article class="flex items-center">
-                            <i class="fas fa-heart text-white fa-2x"></i> 
+                        <article class="flex items-center gap-4 ">
+                            <i class="fas fa-heart text-white fa-2x pt-3"></i> 
                             <p class="text-white">Liked Songs</p>
                         </article>
                    </article>
                 </article>
-                <article class="border">
-
+                <article class="pt-6">
+                    <p class="text-white">Vibesss Only</p>
+                    <p class="text-white">San Francisco</p>
+                    <p class="text-white">Happyyyy</p>
+                    <p class="text-white">Soulful R&B Hits 🎤💔</p>
+                    <p class="text-white">Throwback 90s Bangers 🕺🎉</p>
+                    <p class="text-white">Acoustic Covers 🎸🎤</p>
+                    <p class="text-white">EDM Bangers 🔥🎧</p>
+                    <p class="text-white">Pop Hits of Today 🎤🔝</p>
+                    <p class="text-white">Rainy Days ☔🎶</p>
+                    <p class="text-white">80s Pop Hits 🕺🎤</p>
+                    <p class="text-white">Road Trip 🚗🎶</p>
+                    <p class="text-white">Dinner Party 🍽️🎶</p>
+                    <p class="text-white">Summer Hits 🌞🎶</p>                    
                 </article>
             </aside>
-            <section></section>
+            <section class="bg-gray-800 w-screen h-147">
+
+            </section>
         </div>
         <footer class="reproductor bg-gray-900 w-screen flex justify-between items-center" >
             <div class="cancion w-80 h-26 flex justify-around items-center">
